--- a/index.html
+++ b/index.html
@@ -138,16 +138,16 @@
                         <div class="contact-info">
                             <div class="contact-item">
                                 <h3>Address</h3>
-                                <p>서울특별시 강남구 테헤란로 123</p>
+                                <p>B01, 16, Wausan-ro 29-gil, Mapo-gu, Seoul, Republic of Korea</p>
                             </div>
                             <div class="contact-item">
                                 <h3>Email</h3>
-                                <p>contact@inrain.com</p>
+                                <p>hello@inRAIN.com</p>
                             </div>
-                            <div class="contact-item">
+                            <!--<div class="contact-item">
                                 <h3>Phone</h3>
                                 <p>+82-2-1234-5678</p>
-                            </div>
+                            </div>-->
                         </div>
                     </div>
                 </div>
